--- a/src/main/webapp/WEB-INF/views/Home.html
+++ b/src/main/webapp/WEB-INF/views/Home.html
@@ -5,6 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-<h1>Hello Spring</h1>
+<h1>
+    Hello
+    <span th:text="${name}"></span>
+</h1>
 </body>
 </html>
